--- a/app/src/main/res/layout/dashboard_login.xml
+++ b/app/src/main/res/layout/dashboard_login.xml
@@ -26,9 +26,9 @@
         android:id="@+id/logoImageView"
         android:layout_width="313dp"
         android:layout_height="335dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="52dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/logo"
+        android:src="@drawable/icon_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />
@@ -75,7 +75,7 @@
         android:layout_height="64dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="56dp"
 
         android:text="@string/signup"
         android:textColor="@color/yellow"
